@@ -31,6 +31,10 @@ kwd     2   [a-zA-Z0-9._]*:
 #   C
 ext         c,h,cpp
 comment     //
+kwd     1 [~!%^&*()+={}\\|;:,.<>/?]
+kwd     1 -
+kwd     1 [[]
+kwd     1 ]
 kwd 	1 /\*[^*]*\*/
 kwd 	1 //.*
 kwd 	3 "[^"]*"
